-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: hotspot
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8203969 | 11.0.1 | Markus Grönlund | P3 | Resolved | Fixed | team |
| JDK-8240377 | openjdk8u262 | Andrey Petushkov | P3 | Resolved | Fixed | team |
The signature of "jfr_add_string_constant" contains "jboolean epoch" in cpp file while "jlong gen" is used in hpp file. This leads to link errors on Windows 32 bit.
- backported by
-
JDK-8203969 JFR: Inconsistent signature of jfr_add_string_constant
-
- Resolved
-
-
JDK-8240377 JFR: Inconsistent signature of jfr_add_string_constant
-
- Resolved
-
-
JDK-8243825 JFR: Inconsistent signature of jfr_add_string_constant
-
- Resolved
-
- relates to
-
JDK-8239140 Backport JFR to OpenJDK 8
-
- Resolved
-