8203346: JFR: Inconsistent signature of jfr_add_string_constant

Reviewed-by: shade